bk_ida/gccida/g2/cleanup_subreg_operands
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3173:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3179:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v3 = recog_data_0.operand_loc[v2]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3182:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v2++] = alter_subreg( v3); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3183:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands <= ( int)v2 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3186:38: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)( *( _WORD *)recog_data_0.operand[v2] - 66) <= 0xCu 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3187:47: error: use of undeclared identifier 'recog_data_0'
&& _bittest64( &v1, ( unsigned int)*( _WORD *)recog_data_0.operand[v2] - 66) ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3189:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v2] = walk_alter_subreg( v3); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3193:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( recog_data_0.n_operands > ( int)v2 ); 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3197:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 4609LL; recog_data_0.n_dups > ( int)v4; ++v4 ) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3199:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v6 = recog_data_0.dup_loc[v4]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3203:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*v6 = alter_subreg( recog_data_0.dup_loc[v4]); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/final.c:3211:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*v6 = walk_alter_subreg( recog_data_0.dup_loc[v4]); 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_subreg_operands/src/obj/final.o] Error 1
